tests/e2e/function_return_app2.error
Error: syntax error in story at line 2, column 12

2|        return app.var
                 ^^^

E0128: `any` is readonly and can not be returned.
